--- a/sass-lint.yml
+++ b/sass-lint.yml
@@ -20,7 +20,7 @@ rules:
   mixins-before-declarations:
     - 2
     -
-      exclude: 'respond-to'
+      exclude: 'respond-to, between'
 
   # Line Spacing
   one-declaration-per-line: 2
