--- a/tmux.conf
+++ b/tmux.conf
@@ -6,7 +6,7 @@ set -g utf8
 set-window-option -g utf8 on
 
 # Tmux should be pretty, we need 256 color for that
-set -g default-terminal "screen-256color"
+# set -g default-terminal "screen-256color"
 
 # Mouse support - set to on if you want to use the mouse
 set -g mouse on
