--- a/tmux.conf
+++ b/tmux.conf
@@ -7,6 +7,7 @@ set-window-option -g utf8 on
 
 # Tmux should be pretty, we need 256 color for that
 # set -g default-terminal "screen-256color"
+set -g default-terminal "xterm"
 
 # Mouse support - set to on if you want to use the mouse
 set -g mouse on
@@ -26,7 +27,6 @@ unbind [
 bind v copy-mode
 bind p paste-buffer
 
-
 # command delay? We don't want that, make it short
 set -sg escape-time 1
 
@@ -34,7 +34,6 @@ set -sg escape-time 1
 # of 0 - silly programmers :|
 set-option -g base-index 1
 setw -g pane-base-index 1
-
 
 # Allow us to reload our Tmux configuration while
 # using Tmux
@@ -45,6 +44,11 @@ bind r source-file ~/.tmux.conf \; display "Reloaded!"
 bind | split-window -h
 bind - split-window -v
 
+# Pane resizing shortcuts the feel like vim
+bind -r H resize-pane -L 5
+bind -r J resize-pane -D 5
+bind -r K resize-pane -U 5
+bind -r L resize-pane -R 5
 
 # status line
 set -g status-position bottom
@@ -57,3 +61,37 @@ set -g window-status-format ' #I·#W'
 set -g window-status-current-format ' #I·#W'
 set -g window-status-current-fg colour4
 set -g window-status-current-bg colour10
+
+#### COLOUR (Solarized dark)
+
+#### COLOUR (Solarized light)
+
+# default statusbar colors
+set-option -g status-bg colour235 #base02
+set-option -g status-fg colour136 #yellow
+set-option -g status-attr default
+
+# default window title colors
+set-window-option -g window-status-fg colour244 #base0
+set-window-option -g window-status-bg default
+#set-window-option -g window-status-attr dim
+
+# active window title colors
+set-window-option -g window-status-current-fg colour166 #orange
+set-window-option -g window-status-current-bg default
+#set-window-option -g window-status-current-attr bright
+
+# pane border
+set-option -g pane-border-fg colour235 #base02
+set-option -g pane-active-border-fg colour240 #base01
+
+# message text
+set-option -g message-bg colour235 #base02
+set-option -g message-fg colour166 #orange
+
+# pane number display
+set-option -g display-panes-active-colour colour33 #blue
+set-option -g display-panes-colour colour166 #orange
+
+# clock
+set-window-option -g clock-mode-colour colour64 #green
