--- a/tmux.conf
+++ b/tmux.conf
@@ -1,97 +1,48 @@
-# set Zsh as your default Tmux shell
-set-option -g default-shell /bin/zsh
-
-# UTF is great, let us use that
-set -g utf8
-set-window-option -g utf8 on
-
-# Tmux should be pretty, we need 256 color for that
-# set -g default-terminal "screen-256color"
-set -g default-terminal "xterm"
-
-# Mouse support - set to on if you want to use the mouse
+set-option -sa terminal-overrides ",xterm*:Tc"
 set -g mouse on
 
-# enable activity alerts
-setw -g monitor-activity on
-set -g visual-activity on
-
-# act like GNU screen
 unbind C-b
 bind C-a send-prefix
 set -g prefix C-a
 
-# act like Vim
-setw -g mode-keys vi
-unbind [
-bind v copy-mode
-bind p paste-buffer
+# Vim style pane selection
+bind h select-pane -L
+bind j select-pane -D 
+bind k select-pane -U
+bind l select-pane -R
 
-# command delay? We don't want that, make it short
-set -sg escape-time 1
+# Start windows and panes at 1, not 0
+set -g base-index 1
+set -g pane-base-index 1
+set-window-option -g pane-base-index 1
+set-option -g renumber-windows on
 
-# Set the numbering of windows to go from 1 instead
-# of 0 - silly programmers :|
-set-option -g base-index 1
-setw -g pane-base-index 1
+# Use Alt-arrow keys without prefix key to switch panes
+bind -n M-Left select-pane -L
+bind -n M-Right select-pane -R
+bind -n M-Up select-pane -U
+bind -n M-Down select-pane -D
 
-# Allow us to reload our Tmux configuration while
-# using Tmux
-bind r source-file ~/.tmux.conf \; display "Reloaded!"
+# Shift arrow to switch windows
+bind -n S-Left  previous-window
+bind -n S-Right next-window
 
-# Getting interesting now, we use the vertical and horizontal
-# symbols to split the screen
-bind | split-window -h
-bind - split-window -v
+# Shift Alt vim keys to switch windows
+bind -n M-H previous-window
+bind -n M-L next-window
 
-# Pane resizing shortcuts the feel like vim
-bind -r H resize-pane -L 5
-bind -r J resize-pane -D 5
-bind -r K resize-pane -U 5
-bind -r L resize-pane -R 5
+set -g @catppuccin_flavour 'mocha'
 
-# status line
-set -g status-position bottom
-set -g status-bg colour10
-set -g status-fg colour241
-set -g status-left ''
-set -g status-right '#(date +"%a %d %b %H:%M") '
-set -g status-justify left
-set -g window-status-format ' #I·#W'
-set -g window-status-current-format ' #I·#W'
-set -g window-status-current-fg colour4
-set -g window-status-current-bg colour10
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'dreamsofcode-io/catppuccin-tmux'
 
-#### COLOUR (Solarized dark)
+# Other examples:
+# set -g @plugin 'github_username/plugin_name'
+# set -g @plugin 'github_username/plugin_name#branch'
+# set -g @plugin 'git@github.com:user/plugin'
+# set -g @plugin 'git@bitbucket.com:user/plugin'
 
-#### COLOUR (Solarized light)
-
-# default statusbar colors
-set-option -g status-bg colour235 #base02
-set-option -g status-fg colour136 #yellow
-set-option -g status-attr default
-
-# default window title colors
-set-window-option -g window-status-fg colour244 #base0
-set-window-option -g window-status-bg default
-#set-window-option -g window-status-attr dim
-
-# active window title colors
-set-window-option -g window-status-current-fg colour166 #orange
-set-window-option -g window-status-current-bg default
-#set-window-option -g window-status-current-attr bright
-
-# pane border
-set-option -g pane-border-fg colour235 #base02
-set-option -g pane-active-border-fg colour240 #base01
-
-# message text
-set-option -g message-bg colour235 #base02
-set-option -g message-fg colour166 #orange
-
-# pane number display
-set-option -g display-panes-active-colour colour33 #blue
-set-option -g display-panes-colour colour166 #orange
-
-# clock
-set-window-option -g clock-mode-colour colour64 #green
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
